Remove leftover dependency

--- a/packages/standard-components/package.json
+++ b/packages/standard-components/package.json
@@ -39,7 +39,6 @@
     "apexcharts": "^3.22.1",
     "dayjs": "^1.10.5",
     "svelte-apexcharts": "^1.0.2",
-    "svelte-flatpickr": "^3.1.0",
-    "svelte-portal": "^2.1.2"
+    "svelte-flatpickr": "^3.1.0"
   }
 }
