--- a/packages/standard-components/manifest.json
+++ b/packages/standard-components/manifest.json
@@ -163,7 +163,7 @@
         "type": "text",
         "label": "Empty Text",
         "key": "noRowsMessage",
-        "defaultValue": "No rows found."
+        "defaultValue": "No rows found"
       },
       {
         "type": "filter",
