Add manifest option to prevent showing component empty states

--- a/packages/standard-components/manifest.json
+++ b/packages/standard-components/manifest.json
@@ -1548,6 +1548,7 @@
     "icon": "Table",
     "styleable": true,
     "hasChildren": true,
+    "showEmptyState": false,
     "settings": [
       {
         "type": "dataProvider",
