--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -18,13 +18,14 @@
     "dev:builder": "rollup -cw"
   },
   "dependencies": {
+    "@budibase/bbui": "^0.9.46",
+    "@budibase/standard-components": "^0.9.46",
     "@budibase/string-templates": "^0.9.46",
     "regexparam": "^1.3.0",
     "shortid": "^2.2.15",
     "svelte-spa-router": "^3.0.5"
   },
   "devDependencies": {
-    "@budibase/standard-components": "^0.9.46",
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "fs-extra": "^8.1.0",
