--- a/packages/standard-components/manifest.json
+++ b/packages/standard-components/manifest.json
@@ -31,7 +31,7 @@
       },
       {
         "type": "select",
-        "label": "Horizontal",
+        "label": "Horiz. Align",
         "key": "hAlign",
         "showInBar": true,
         "options": [
@@ -64,7 +64,7 @@
       },
       {
         "type": "select",
-        "label": "Vertical",
+        "label": "Vert. Align",
         "key": "vAlign",
         "showInBar": "true",
         "options": [
