--- a/.eslintignore
+++ b/.eslintignore
@@ -1,1 +1,6 @@
-packages/server/builder/**/*.js
+node_modules
+public
+dist
+packages/server/builder
+packages/server/coverage
+packages/builder/.routify
