--- a/packages/standard-components/manifest.json
+++ b/packages/standard-components/manifest.json
@@ -38,9 +38,9 @@
         "defaultValue": "Top"
       },
       {
-        "type": "navigationSelect",
+        "type": "navigation",
         "label": "Links",
-        "key": "type"
+        "key": "links"
       }
     ]
   },
@@ -57,7 +57,6 @@
       {
         "type": "select",
         "label": "Direction",
-        "key": "direction",
         "key": "direction",
         "showInBar": true,
         "options": [
