Add content width setting to layouts

--- a/packages/standard-components/manifest.json
+++ b/packages/standard-components/manifest.json
@@ -44,6 +44,13 @@
         "defaultValue": false
       },
       {
+        "type": "select",
+        "label": "Content Width",
+        "key": "contentWidth",
+        "options": ["Small", "Medium", "Large"],
+        "defaultValue": "Large"
+      },
+      {
         "type": "navigation",
         "label": "Links",
         "key": "links"
