Make navigation respect width setting

--- a/packages/standard-components/manifest.json
+++ b/packages/standard-components/manifest.json
@@ -45,8 +45,8 @@
       },
       {
         "type": "select",
-        "label": "Content Width",
-        "key": "contentWidth",
+        "label": "Width",
+        "key": "width",
         "options": ["Small", "Medium", "Large"],
         "defaultValue": "Large"
       },
