Remove deprecated navigation component from the builder but leave it in standard components for compatibility

--- a/packages/builder/src/components/design/AppPreview/componentStructure.json
+++ b/packages/builder/src/components/design/AppPreview/componentStructure.json
@@ -62,8 +62,7 @@
     "name": "Other",
     "icon": "More",
     "children": [
-      "screenslot",
-      "navigation"
+      "screenslot"
     ]
   }
 ]
