adding docker staging tag to CI build to avoid polluting latest

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -13,6 +13,7 @@
     "test:integration": "jest --coverage --detectOpenHandles",
     "test:watch": "jest --watch",
     "build:docker": "docker build . -t app-service",
+    "build:docker:staging": "docker build . -t app-service:staging",
     "run:docker": "node src/index",
     "dev:stack:up": "node scripts/dev/manage.js up",
     "dev:stack:down": "node scripts/dev/manage.js down",
