--- a/.github/workflows/budibase_ci.yml
+++ b/.github/workflows/budibase_ci.yml
@@ -43,13 +43,13 @@ jobs:
         verbose: true 
     - run: yarn test:e2e:ci
 
-    - name: Build and Push Staging Docker Image
+    - name: Build and Push Development Docker Image
       # Only run on push
       if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/develop' }}
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
         yarn build
-        yarn build:docker:staging
+        yarn build:docker:develop
       env:
         DOCKER_USER: ${{ secrets.DOCKER_USERNAME }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_API_KEY }}
