make app service wait on redis-service so we don't get redis connection errors

--- a/hosting/docker-compose.yaml
+++ b/hosting/docker-compose.yaml
@@ -29,6 +29,7 @@ services:
       - ./logs:/logs
     depends_on:
       - worker-service
+      - redis-service
 
   worker-service:
     restart: always
