--- a/packages/builder/package.json
+++ b/packages/builder/package.json
@@ -16,7 +16,7 @@
     "cy:open": "cypress open",
     "cy:run:ci": "cypress run --record --key f308590b-6070-41af-b970-794a3823d451",
     "cy:test": "start-server-and-test cy:setup http://localhost:10001/builder cy:run",
-    "cy:ci": "start-server-and-test cy:setup http://localhost:10001/builder cy:run:ci",
+    "cy:ci": "start-server-and-test cy:setup http://localhost:10001/builder cy:run",
     "cy:debug": "start-server-and-test cy:setup http://localhost:10001/builder cy:open"
   },
   "jest": {
