--- a/packages/standard-components/manifest.json
+++ b/packages/standard-components/manifest.json
@@ -174,6 +174,32 @@
           }
         ],
         "defaultValue": "shrink"
+      },
+      {
+        "type": "select",
+        "label": "Gap",
+        "key": "gap",
+        "showInBar": true,
+        "barStyle": "picker",
+        "options": [
+          {
+            "label": "None",
+            "value": "N"
+          },
+          {
+            "label": "Small",
+            "value": "S"
+          },
+          {
+            "label": "Medium",
+            "value": "M"
+          },
+          {
+            "label": "Large",
+            "value": "L"
+          }
+        ],
+        "defaultValue": "M"
       }
     ]
   },
@@ -368,7 +394,7 @@
         "type": "select",
         "label": "Size",
         "key": "size",
-        "defaultValue": "Medium",
+        "defaultValue": "M",
         "showInBar": true,
         "barStyle": "picker",
         "options": [{
@@ -462,7 +488,7 @@
         "type": "select",
         "label": "Size",
         "key": "size",
-        "defaultValue": "Medium",
+        "defaultValue": "M",
         "showInBar": true,
         "barStyle": "picker",
         "options": [{
