Add report component, add PDF generation

--- a/packages/standard-components/manifest.json
+++ b/packages/standard-components/manifest.json
@@ -2049,5 +2049,28 @@
         "defaultValue": "Last 30 days"
       }
     ]
+  },
+  "pdfreport": {
+    "name": "Report",
+    "icon": "Document",
+    "hasChildren": true,
+    "showEmptyState": false,
+    "settings": [
+      {
+        "type": "text",
+        "label": "File name",
+        "key": "fileName"
+      },
+      {
+        "type": "number",
+        "label": "Pages",
+        "key": "pageCount"
+      },
+      {
+        "type": "boolean",
+        "label": "Footer",
+        "key": "footer"
+      }
+    ]
   }
 }
