Add size styles and placeholder to image component

--- a/packages/standard-components/manifest.json
+++ b/packages/standard-components/manifest.json
@@ -729,6 +729,7 @@
     "description": "A basic component for displaying images",
     "icon": "Image",
     "illegalChildren": ["section"],
+    "styles": ["size"],
     "settings": [
       {
         "type": "text",
