Add placeholder to background image, fix default styles and add size styles

--- a/packages/standard-components/manifest.json
+++ b/packages/standard-components/manifest.json
@@ -742,6 +742,7 @@
     "name": "Background Image",
     "description": "A background image",
     "icon": "Images",
+    "styles": ["size"],
     "illegalChildren": ["section"],
     "settings": [
       {
