--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -9,11 +9,11 @@
     "url": "https://github.com/Budibase/budibase.git"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && mv dist/src/* dist/ && rmdir dist/src/",
     "test": "jest --coverage --maxWorkers=2",
     "test:watch": "jest --watch",
     "build:docker": "docker build . -t app-service",
-    "run:docker": "node dist/src/index.js",
+    "run:docker": "node dist/index.js",
     "dev:stack:up": "node scripts/dev/manage.js up",
     "dev:stack:down": "node scripts/dev/manage.js down",
     "dev:stack:nuke": "node scripts/dev/manage.js nuke",
