--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -121,7 +121,7 @@
     "@types/koa": "^2.13.3",
     "@types/koa-router": "^7.4.2",
     "@types/node": "^15.12.4",
-    "@typescript-eslint/parser": "^4.28.0",
+    "@typescript-eslint/parser": "4.28.0",
     "babel-jest": "^27.0.2",
     "copyfiles": "^2.4.1",
     "docker-compose": "^0.23.6",
