Remove a lot of hacks around screenslots and allow naming them

--- a/packages/standard-components/manifest.json
+++ b/packages/standard-components/manifest.json
@@ -230,7 +230,8 @@
   "screenslot": {
     "name": "Screenslot",
     "icon": "WebPage",
-    "description": "Contains your app screens"
+    "description": "Contains your app screens",
+    "editable": false
   },
   "button": {
     "name": "Button",
