Add feature flags to manifest

--- a/packages/standard-components/manifest.json
+++ b/packages/standard-components/manifest.json
@@ -1,4 +1,8 @@
 {
+  "features": {
+    "spectrumThemes": true,
+    "intelligentLoading": true
+  },
   "layout": {
     "name": "Layout",
     "description": "This component is specific only to layouts",
