--- a/packages/standard-components/manifest.json
+++ b/packages/standard-components/manifest.json
@@ -31,7 +31,7 @@
         "type": "select",
         "label": "Width",
         "key": "width",
-        "options": ["Small", "Medium", "Large"],
+        "options": ["Small", "Medium", "Large", "Max"],
         "defaultValue": "Large"
       },
       {
