Swapping admin -> global in worker to reduce confusion in API url naming.

--- a/hosting/envoy.yaml
+++ b/hosting/envoy.yaml
@@ -38,7 +38,7 @@ static_resources:
                   cluster: app-service
 
               # special case for worker admin API
-              - match: { prefix: "/api/admin/" }
+              - match: { prefix: "/api/global/" }
                 route:
                   cluster: worker-service
 
