--- a/packages/standard-components/package.json
+++ b/packages/standard-components/package.json
@@ -14,7 +14,8 @@
   "scripts": {
     "build": "vite build",
     "prepublishOnly": "yarn run build",
-    "postpublish": "node scripts/deploy.js"
+    "postpublish": "node scripts/deploy.js",
+    "builder:dev": "vite build --watch"
   },
   "files": [
     "manifest.json",
@@ -24,7 +25,7 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.5",
     "svelte": "^3.38.2",
-    "vite": "^2.1.5"
+    "vite": "^2.2.0"
   },
   "keywords": [
     "svelte"
