clear form action - adjust manifest and add settings form

--- a/packages/standard-components/manifest.json
+++ b/packages/standard-components/manifest.json
@@ -1647,7 +1647,8 @@
     "hasChildren": true,
     "illegalChildren": ["section"],
     "actions": [
-      "ValidateForm"
+      "ValidateForm",
+      "ClearForm"
     ],
     "styles": ["size"],
     "settings": [
