--- a/packages/worker/package.json
+++ b/packages/worker/package.json
@@ -16,7 +16,9 @@
     "build:docker": "docker build . -t worker-service",
     "dev:stack:init": "node ./scripts/dev/manage.js init",
     "dev:builder": "npm run dev:stack:init && nodemon src/index.js",
-    "test": "jest --runInBand"
+    "test": "jest --runInBand",
+    "multi:enable": "node scripts/multiTenancy.js enable",
+    "multi:disable": "node scripts/multiTenancy.js disable"
   },
   "author": "Budibase",
   "license": "AGPL-3.0-or-later",
@@ -52,7 +54,8 @@
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "pouchdb-adapter-memory": "^7.2.2",
-    "supertest": "^6.1.3"
+    "supertest": "^6.1.3",
+    "update-dotenv": "^1.1.1"
   },
   "jest": {
     "testEnvironment": "node",
