--- a/packages/standard-components/package.json
+++ b/packages/standard-components/package.json
@@ -34,6 +34,7 @@
   "gitHead": "d1836a898cab3f8ab80ee6d8f42be1a9eed7dcdc",
   "dependencies": {
     "@budibase/bbui": "^0.9.82",
+    "@spectrum-css/card": "^3.0.3",
     "@spectrum-css/link": "^3.1.3",
     "@spectrum-css/page": "^3.0.1",
     "@spectrum-css/typography": "^3.0.2",
